# NC2

./: .gitignore  CMakeLists.txt  NC2.cc  install.sh  run_eff.mac
analysis/: .gitignore  ProcessTree.C  angles.py  plot.py
data/: 64Zn_n15_statistical_KWD3_3_N2intensities.txt  64Zn_n15_statistical_KWD3_3_N3intensities.txt  64Zn_n15_statistical_KWD3_3_N4intensities.txt  64Zn_n15_statistical_KWD3_3_N5intensities.txt  64Zn_n15_statistical_KWD3_3_N6intensities.txt  64Zn_n15_statistical_KWD3_3_intensities.txt  64Zn_n15_statistical_KWD3_3_population.txt  CMakeLists.txt  CascadeZn.cc  EnergyDiffZn64.dat.txt  generate_levels_C.py
data/ElisaCalculation/: 64Zn_KWD3_3_statN15_fulloutput.out
include/: ChangeFilename.py  Detector.hh  GeDetector.hh  HitStruct.h  Level.hh  NC2ActionInitialization.hh  NC2Analysis.hh  NC2DetectorConstruction.hh  NC2DummyHit.hh  NC2DummySD.hh  NC2EventAction.hh  NC2GermaniumHit.hh  NC2GermaniumSD.hh  NC2PrimaryGeneratorAction.hh  NC2PrimaryGeneratorMessenger.hh  NC2Run.hh  NC2RunAction.hh  NC2SteppingAction.hh  utils.hh
macros/: run_eff.mac  vis_new.mac
src/: Detector.cc  GeDetector.cc  Level.cc  NC2ActionInitialization.cc  NC2DetectorConstruction.cc  NC2DummyHit.cc  NC2DummySD.cc  NC2EventAction.cc  NC2GermaniumHit.cc  NC2GermaniumSD.cc  NC2PrimaryGeneratorAction.cc  NC2PrimaryGeneratorMessenger.cc  NC2Run.cc  NC2RunAction.cc  NC2SteppingAction.cc
